kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-micro-services
  namespace: auth-micro-services
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-micro-services
  template:
    metadata:
      labels:
        app: auth-micro-services
    spec:
      containers:
        - name: api
          image: sudtanj/auth-micro-services:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-micro-services-service
  namespace: auth-micro-services
  labels:
    app: auth-micro-services
spec:
  ports:
    - port: 5000
      name: http
      targetPort: 3000
  selector:
    app: auth-micro-services
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-micro-services-ingress
  namespace: auth-micro-services
spec:
  ingressClassName: kong
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-micro-services-service
                port:
                  number: 5000
